[gd_scene load_steps=12 format=3 uid="uid://bcsadtisr4kd7"]

[ext_resource type="Script" path="res://scene/upgrade_shop_stage_3.gd" id="1_5yo4g"]
[ext_resource type="Texture2D" uid="uid://d3io78ml0fp5y" path="res://img_upgradeIcons/letgo.png" id="2_yl8bg"]
[ext_resource type="Texture2D" uid="uid://bfddw2yslfdcf" path="res://img_misc/panelcontainer.png" id="3_38qwb"]
[ext_resource type="StyleBox" uid="uid://ca3h58dvds0ie" path="res://style.tres" id="4_rbhgp"]
[ext_resource type="Texture2D" uid="uid://28ordtdonqcu" path="res://img_misc/Illustration727vtran.png" id="5_wc4v7"]
[ext_resource type="Texture2D" uid="uid://bxp84lcqp31ke" path="res://img_misc/castle.jpg" id="6_1qu2i"]
[ext_resource type="AudioStream" uid="uid://cjqlk5ewhigj3" path="res://sfx/money.ogg" id="7_aio65"]
[ext_resource type="AudioStream" uid="uid://eow2k4k8rjgc" path="res://sfx/woodknock.ogg" id="8_a0067"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_y7kuk"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xorrd"]
texture = ExtResource("3_38qwb")
texture_margin_left = 11.0
texture_margin_top = 11.0
texture_margin_right = 11.0
texture_margin_bottom = 11.0
modulate_color = Color(0.252028, 0.252028, 0.252028, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1e5d7"]
texture = ExtResource("3_38qwb")
texture_margin_left = 11.0
texture_margin_top = 11.0
texture_margin_right = 11.0
texture_margin_bottom = 11.0
modulate_color = Color(0.986847, 0.956177, 0.963063, 1)

[node name="upgrade_shop_stage3" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5yo4g")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_color = Color(0.709804, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 22
text = "UPGRADE SHOP"
horizontal_alignment = 1

[node name="fate" type="Button" parent="VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "The Final Pact"
icon = ExtResource("2_yl8bg")
icon_alignment = 1
vertical_icon_alignment = 0

[node name="description" type="Label" parent="VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
text = "Allows you to choose your fate"
horizontal_alignment = 1

[node name="descriptionCost" type="Label" parent="VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
horizontal_alignment = 1

[node name="descriptionPlayer" type="Label" parent="VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
horizontal_alignment = 1

[node name="back" type="Button" parent="VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_styles/focus = SubResource("StyleBoxEmpty_y7kuk")
theme_override_styles/hover = SubResource("StyleBoxTexture_xorrd")
theme_override_styles/pressed = SubResource("StyleBoxTexture_1e5d7")
theme_override_styles/normal = ExtResource("4_rbhgp")
text = "Back"

[node name="Illustration727Vtran" type="Sprite2D" parent="."]
z_index = -3
position = Vector2(219, 112)
scale = Vector2(0.0473236, 0.0473236)
texture = ExtResource("5_wc4v7")

[node name="Castle" type="Sprite2D" parent="."]
z_index = -7
position = Vector2(158, 117)
scale = Vector2(0.4975, 0.4975)
texture = ExtResource("6_1qu2i")

[node name="buy" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_aio65")
volume_db = -15.0
bus = &"SFX"

[node name="unableBuy" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_a0067")
volume_db = -20.0
pitch_scale = 0.25
bus = &"SFX"

[connection signal="pressed" from="VBoxContainer/fate" to="." method="_on_fate_pressed"]
[connection signal="pressed" from="VBoxContainer/back" to="." method="_on_back_pressed"]
